update google auth is loading loader

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-GOOGLE_CLIENT_ID=54211129985-t7k92hecs8c1bajo0k9eq2vt93jf07p6.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+# GOOGLE_CLIENT_ID=54211129985-t7k92hecs8c1bajo0k9eq2vt93jf07p6.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/next_db2"
 NEXTAUTH_SECRET='adsfsdfsada'
+
+
+
+GOOGLE_CLIENT_ID="412430492784-oiqgr4ffjkg8rbo7uv3juh8upohau8lu.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
