--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-auth",
+  "name": "nextjs-auth-prisma-started",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,9 +26,9 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
-    "next": "13.4.12",
+    "next": "^13.5.6",
     "next-auth": "^4.24.4",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
